--- a/templates/detail.html
+++ b/templates/detail.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8"><title>{{object.target}} School Finance | EdSource</title></meta>
         {% include 'header.html' %}
-        <link rel="stylesheet" type="text/css" href="http://edsource.org/wp-content/css/charts/bar.css">
-        <script type="text/javascript" src="http://edsource.org/wp-content/js/charts/bar-jinja.js"></script>
+        <link rel="stylesheet" type="text/css" href="/static/bar.css">
+        <script type="text/javascript" src="/static/dual-bar-jinja.js"></script>
     </head>
     <body>
         <div id="slick-contain">
