--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"><title>Local Control Funding Formula Database | EdSource</title></meta>
         {% include 'header.html' %}
-        <script type="text/javascript" src="http://edsource.org/wp-content/js/lcff-compare-search.js"></script>
+        <script type="text/javascript" src="/static/lcff-compare-search.js"></script>
     </head>
     <body>
         <div id="slick-contain">
@@ -12,13 +12,13 @@
             <section id="slick-body">              
                 <div role="intro" class="fifty">
                     <h2>Local Control Funding Formula Database</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <p>Search through all California school districts and charter schools to learn how much money they are expected to receive through the local control funding formula. Start typing the name of the county, district or charter in the search bar below to retrieve search results. Click on a result to go to its page.</p>
+                    <p>If you’re interested in comparing two districts or charter schools, click on the “Compare” button in the top right navigation bar. Search a table of all districts and charters by clicking “Search” in the navigation bar. Finally, for all the details of the local control funding formula, click on “Guide” in the navigation bar.</p>
                 </div>
                 <div role="search" class="fifty">
                     <div>
                         <h3>Search Districts and Charters</h3>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                        <input class="search-bar" link="yes" role="0" type="text" style="height:24px;" placeholder="Search Districts and Charters">
+                        <input class="search-bar" link="yes" role="0" type="text" style="height:24px;" placeholder="Type Districts, Charters, or County Name Here">
                     </div>
                 </div>
                 <div class="lcff-results fifty" role="results" type="0"></div>
