--- a/templates/search.html
+++ b/templates/search.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"><title>Search School Districts and Charters | EdSource</title></meta>
-        <link rel="stylesheet" type="text/css" href="http://edsource.org/wp-content/css/charts/table.css">
+        <link rel="stylesheet" type="text/css" href="/static/table.css">
         {% include 'header.html' %}
     </head>
     <body>
@@ -14,6 +14,7 @@
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
                 </div>
                 <div class="pretty-table seventy">
+                    <div id="pretty-table-top"><i class="fa fa-arrow-up"></i></div>
                     <section id="pretty-table-search-options">
                         <input id="pretty-table-search" type="text" style="height:24px;" placeholder="Search School Districts">
                         <div><p class="pretty-table-button" id="execute-search">Search</p></div>
@@ -71,7 +72,7 @@
 
             /* CONFIGURE TABLESORTER
             ======================================*/ 
-            jQuery('#lcff-table').tablesorter();
+            jQuery('#lcff-table').tablesorter({sortList: [[0,0]]});
 
             /* SEARCH OPTIONS
             ======================================*/ 
@@ -83,94 +84,56 @@
                 jQuery('#pretty-table-search').val('');
                 jQuery('.pretty-table tbody tr').slice(10).hide();
             })
+
+            /* ADD FIXED HEADER
+            ======================================*/
+            jQuery('.pretty-table').append('<div class="pretty-table-fixed"></div>');
+            jQuery('.pretty-table .pretty-table-fixed').detach().insertAfter('#pretty-table-search-options');
+
+            jQuery('.pretty-table .pretty-table-fixed').append('<div>District/Charter</div>');
+            jQuery('.pretty-table .pretty-table-fixed').append('<div>High-Needs Students</div>');
+            jQuery('.pretty-table .pretty-table-fixed').append('<div>2015-16 Estimate</div>');
+            jQuery('.pretty-table .pretty-table-fixed').append('<div>2020-21 Target</div>');
+
+            /* FIXED HEADER WIDTH
+            ======================================*/
+            var fixedHedWidth = 100 / 4;
+            jQuery('.pretty-table .pretty-table-fixed div').css('width', fixedHedWidth + '%');
+
+            /* WORK THE FIXED HEADER
+            ======================================*/
+            var realHed = jQuery('.pretty-table thead').offset();
+            var lastRow = jQuery('.pretty-table tbody tr:last-of-type').offset();
+
+            jQuery(document).on('scroll', function(){
+                var curPos = jQuery(this).scrollTop();
+
+                var tableWidth = jQuery('#lcff-table').width();
+                jQuery('.pretty-table .pretty-table-fixed').css('width', tableWidth + 'px');
+
+                if (curPos > realHed.top + 60 && curPos < lastRow.top) {
+                    jQuery('.pretty-table .pretty-table-fixed').show();
+                    jQuery('#pretty-table-top').show();
+                }
+                else {
+                    jQuery('.pretty-table .pretty-table-fixed').hide();
+                    jQuery('#pretty-table-top').hide();        
+                }
+            });
         })
 
         window.onload = function(){
-            /* TRUNCATION
-            ======================================*/
-            //hide all rows past 10th as default
-            jQuery('.pretty-table tbody tr').slice(10).hide();
 
-            //add navigation buttons
-            jQuery('.pretty-table').append('<div class="pretty-table-nav"><p first="1"><a>Previous</a></p><p status="0"><a>Expand Rows</a></p><p last="10"><a>Next</a></p></div>');
+             /* CONFIGURE BACK TO THE TOP
+            ======================================*/ 
+            window.setTimeout(function() {
+                jQuery('#pretty-table-top').on('click', function(){
+                    window.scrollTo(0,0);
+                })
+            }, 0);
 
-            // Next Rows
-            jQuery('.pretty-table .pretty-table-nav p:eq(2)').on('click', function(){
-                var last = parseInt(jQuery(this).attr('last')), total = jQuery('.pretty-table tbody tr').size();
-
-                //show previous
-                jQuery('.pretty-table .pretty-table-nav p:eq(0)').css('display', 'inline');
-                
-                //make sure we don't hide all the rows
-                if (total === last){return;}
-                else if ((last+10) > total){
-                    jQuery('.pretty-table tbody tr').hide();
-                    jQuery('.pretty-table tbody tr').slice(last, total).show();
-                    jQuery(this).attr('last', total);
-                }
-                else {
-                    jQuery('.pretty-table tbody tr').hide();
-                    jQuery('.pretty-table tbody tr').slice(last, last+10).show();
-                    last += 10;
-                    jQuery(this).attr('last', last);
-                }       
-
-                //do we need a next?
-                if (total === last){jQuery('.pretty-table .pretty-table-nav p:eq(2)').hide();}  
-
-                //update previous data
-                jQuery('.pretty-table .pretty-table-nav p:eq(0)').attr('first', last-9);
-
-            });
-
-            // Expand All or Collapse
-            jQuery('.pretty-table .pretty-table-nav p:eq(1)').on('click', function(){
-                var status = parseInt(jQuery(this).attr('status'));
-
-                if (status == 0){
-                    jQuery('.pretty-table tbody tr').show();
-                    jQuery('.pretty-table .pretty-table-nav p:eq(1) a').text('Collapse Rows');
-                    jQuery('.pretty-table .pretty-table-nav p:eq(0)').attr('first', '1').hide();
-                    jQuery('.pretty-table .pretty-table-nav p:eq(2)').attr('last', '10').hide();
-                    jQuery(this).attr('status', '1');
-                }
-                else if (status == 1){
-                    jQuery('.pretty-table tbody tr').slice(10).hide();
-                    jQuery('.pretty-table .pretty-table-nav p:eq(1) a').text('Expand Rows');
-                    jQuery('.pretty-table .pretty-table-nav p:eq(2)').css('display', 'inline');
-                    jQuery(this).attr('status', '0');
-                }
-                
-            });
-
-            // Previous Rows
-            jQuery('.pretty-table .pretty-table-nav p:eq(0)').on('click', function(){
-                var first = parseInt(jQuery(this).attr('first'));
-
-                //show next
-                jQuery('.pretty-table .pretty-table-nav p:eq(2)').css('display', 'inline');
-
-                //make sure we don't hide all the rows
-                if (first == 1){return;}
-                else if ((first-10) < 1){
-                    jQuery('.pretty-table tbody tr').hide();
-                    jQuery('.pretty-table tbody tr').slice(0, 10).show();
-                    jQuery(this).attr('first', 1);
-                }
-                else {
-                    jQuery('.pretty-table tbody tr').hide();
-                    jQuery('.pretty-table tbody tr').slice(first-11, first-1).show();
-                    first -= 10;
-                    jQuery(this).attr('first', first);
-                }       
-
-                //update next data
-                jQuery('.pretty-table .pretty-table-nav p:eq(2)').attr('last', first+9);
-
-                //do we need a previous?
-                if (first === 1){jQuery('.pretty-table .pretty-table-nav p:eq(0)').hide();} 
-
-            });
+            
         }
+
     </script>
 </html>
