--- a/templates/compare.html
+++ b/templates/compare.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8"><title>Compare School Districts and Charters | EdSource</title></meta>
         {% include 'header.html' %}
-        <script type="text/javascript" src="http://edsource.org/wp-content/themes/nakatomi/scripts/lcff-compare-search.js"></script>
-        <link rel="stylesheet" type="text/css" href="http://edsource.org/wp-content/css/charts/bar.css">
-        <script type="text/javascript" src="http://edsource.org/wp-content/js/charts/bar-jinja.js"></script>
+        <script type="text/javascript" src="/static/lcff-compare-search.js"></script>
+        <link rel="stylesheet" type="text/css" href="/static/bar.css">
+        <script type="text/javascript" src="/static/dual-bar-jinja.js"></script>
     </head>
     <body>
         <div id="slick-contain">
