--- a/templates/header.html
+++ b/templates/header.html
@@ -10,10 +10,10 @@
 <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700' rel='stylesheet' type='text/css'>
 <link rel='stylesheet' id='default_css-css'  href='http://edsource.org/wp-content/themes/nakatomi/style.css' type='text/css' media='all' />
 <link rel='stylesheet' id='default_css-css'  href='http://edsource.org/wp-content/themes/nakatomi/templates/slick/slick.css' type='text/css' media='all' />
-<link rel='stylesheet' id='default_css-css'  href='http://edsource.org/wp-content/css/lcff-database.css' type='text/css' media='all' />
+<link rel='stylesheet' id='default_css-css'  href='/static/lcff-database.css' type='text/css' media='all' />
 <link rel="shortcut icon" href="http://edsource.org/wp-content/themes/nakatomi/styles/graphics/favicon.png">
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js" charset="utf-8"></script>
 <script src="http://edsource.org/wp-content/js/d3.tip.v0.6.3.js" charset="utf-8"></script>
 <script type="text/javascript" src="http://edsource.org/wp-content/js/colorbrewer.js"></script>
