--- a/templates/nav.html
+++ b/templates/nav.html
@@ -4,13 +4,13 @@
     </div>
     <div><h2><a href="http://localhost:5000">Local Control Funding Database</a></h2></div>
      <div class="slick-social-hed">
-        <a onclick="ga('send\','event\', 'LCFF DATABASE\', 'TWITTER\', '');" href="https://twitter.com/share?url=http%3A%2F%2Fedsource.org%2F%3Fpage_id=&via=edsource&text="><i class="fa fa-twitter"></i></a>
-        <a onclick="ga('send\','event\', 'LCFF DATABASE\', 'FB\', '');" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fedsource.org%2F%3Fpage_id="><i class="fa fa-facebook"></i></a>
-        <a onclick="ga('send\','event\', 'LCFF DATABASE\', 'LINKED\', '');" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Fedsource.org%2F%3Fpage_id=&title=: &summary=&source=EdSource"><i class="fa fa-linkedin"></i></a>
+        <a onclick="ga('send','event', 'LCFF DATABASE', 'TWITTER', '');" href="https://twitter.com/share?url=http%3A%2F%2Fedsource.org%2F%3Fpage_id=&via=edsource&text="><i class="fa fa-twitter"></i></a>
+        <a onclick="ga('send','event', 'LCFF DATABASE', 'FB', '');" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fedsource.org%2F%3Fpage_id="><i class="fa fa-facebook"></i></a>
+        <a onclick="ga('send','event', 'LCFF DATABASE', 'LINKED', '');" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Fedsource.org%2F%3Fpage_id=&title=: &summary=&source=EdSource"><i class="fa fa-linkedin"></i></a>
     </div>
     <div class="slick-nav-hed">
         <a href="search.html">Search</a>
-        <a href="http://localhost:5000/compare-districts-charters.html">Compare</a>
+        <a href="/compare-districts-charters.html">Compare</a>
         <a href="http://edsource.org/?p=89272">Guide</a>
     </div>
 
