--- a/templates/compare.html
+++ b/templates/compare.html
@@ -13,7 +13,7 @@
             <section id="slick-body">
                 <div role="intro" class="fifty">
                     <h2>Compare School Districts and Charters</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <p>Select any two California school districts or charter schools to compare the amount of money they are expected to receive through the local control funding formula.</p>
                 </div>
                 <div class="twenty-five" role="choices">
                     <div>
@@ -26,7 +26,7 @@
                         <input link="no" class="search-bar" role="1" type="text" style="height:24px;" placeholder="Option 2">
                     </div>
                 </div>
-                <div class="twenty-five"><div role="results" class="lcff-results twenty-five" type="0"></div></div>
+                <div class="twenty-five"><div role="results" class="lcff-results" type="0"></div></div>
                 <div class="temp-charts" id="chart1"></div>
                 
             </section>  
