added slick social

--- a/templates/compare.html
+++ b/templates/compare.html
@@ -14,6 +14,7 @@
                 <div role="intro" class="fifty">
                     <h2>Compare School Districts and Charters</h2>
                     <p>Select any two California school districts or charter schools to compare the amount of money they are expected to receive through the local control funding formula.</p>
+                    {% include 'social.html' %}
                 </div>
                 <div class="twenty-five" role="choices">
                     <div>
