--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
                     <h2>Local Control Funding Formula Database</h2>
                     <p>Search through all California school districts and charter schools to learn how much money they are expected to receive through the local control funding formula. Start typing the name of the county, district or charter in the search bar below to retrieve search results. Click on a result to go to its page.</p>
                     <p>If you’re interested in comparing two districts or charter schools, click on the “Compare” button in the top right navigation bar. Search a table of all districts and charters by clicking “Search” in the navigation bar. Finally, for all the details of the local control funding formula, click on “Guide” in the navigation bar.</p>
+                    {% include 'social.html' %}
                 </div>
                 <div role="search" class="fifty">
                     <div>
