--- a/templates/detail.html
+++ b/templates/detail.html
@@ -14,6 +14,7 @@
                <div role="header" class="seventy">
                     <h2>{{object.target}}</h2>
                     <p>{{object.county_name}} County</p>
+                    {% include 'social.html' %}
                </div>
                <div class="temp-charts" id="chart1"></div>
                <div role="caveat" class="twenty-five">
@@ -65,6 +66,7 @@
         jQuery(document).ready(function(){
             var related = jQuery('div[role="links"] a').size();
             if (related < 1){jQuery('div[role="links"]').append('<p>No related districts or charter schools found.</p>')}
+
         })
 
 
