--- a/templates/search.html
+++ b/templates/search.html
@@ -12,6 +12,7 @@
             <section id="slick-body">
                 <div role="intro" class="seventy">
                     <h2>Search School Districts and Charters</h2>
+                    {% include 'social.html' %}
                 </div>
                 <div class="pretty-table seventy">
                     <div id="pretty-table-top"><i class="fa fa-arrow-up"></i></div>
