--- a/templates/detail.html
+++ b/templates/detail.html
@@ -17,11 +17,9 @@
                     {% include 'social.html' %}
                </div>
                <div class="temp-charts" id="chart1"></div>
-               <div role="caveat" class="twenty-five">
-                    <p>{% if object.floor_targ_caveat == 'TRUE' %} CAVEAT! {% endif %}{% if object.basic_aid  == 'TRUE' %} I'm a basic aid district, whomp.{% endif %}</p>
-               </div>
                <div role="facts" class="twenty-five">
                     <h3>Key Facts</h3>
+                    {% if object.basic_aid  == 'TRUE' %}<h4>Basic Aid District</h4><p><em> I'm a basic aid district, whomp.</em></p>{% endif %}
                     <h4>Avg Daily Attendance</h4>
                     <p>{{('{0:,}'.format(object.ada | int))}}</p>
                     <h4>High-Needs Students</h4>
@@ -31,7 +29,9 @@
                     <h4>2015-16 Estimate</h4>
                     <p>${{('{0:,}'.format(object.y201516 | int))}}/student</p>
                     <h4>2020-21 Target</h4>
-                    <p>${{('{0:,}'.format(object.y202021 | int))}}/student</p>
+                    <p>${{('{0:,}'.format(object.y202021 | int))}}/student
+                    {% if object.floor_targ_caveat == 'TRUE'%}<br \><em>I'm a caveat</em>  
+                    {% endif%}</p>
                </div>
                 <div role="search" class="twenty-five">
                     <div>
