--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="slick-contain">
             {% include 'nav.html' %}
-            <section id="lcff-header"><img src="http://edsource.org/wp-content/uploads/2015/11/lcff-header.jpg"><p>Edsource</p></section>
+            <section id="lcff-header"><img src="http://edsource.org/wp-content/uploads/2014/06/CURRICULUM_deeper_2.jpg"><p>Edsource</p></section>
             <section id="slick-body">              
                 <div role="intro" class="fifty">
                     <h2>Local Control Funding Formula Database</h2>
@@ -19,6 +19,7 @@
                 <div role="search" class="fifty">
                     <div>
                         <h3>Search Districts and Charters</h3>
+                        <p>Basic Aid districts can be found by clicking on "Basic Aid" in the navigation bar at the top.</p>
                         <input class="search-bar" link="yes" role="0" type="text" style="height:24px;" placeholder="Type Districts, Charters, or County Name Here">
                     </div>
                 </div>
