--- a/static/lcff-database.css
+++ b/static/lcff-database.css
@@ -37,6 +37,8 @@
 /* SEARCH STYLE 
 ===========================================*/
 #slick-body>div[role="search"] {border: 1px solid #333;padding: 1em 1em;background: #d8e6f1;}
+	#slick-body>div[role="search"]>div h3 {margin:0;}
+	#slick-body>div[role="search"]>div p {font-style: italic;font-size: 1rem;}
 	#slick-body>div[role="search"] input {width:100%;}  
 #slick-body div[role="results"] {max-height: 200px;overflow: scroll;border-bottom: #ddd solid 2px;margin-top: 1em;border-top: #ddd solid 2px;background: #fff;}
 	#slick-body div[role="results"] div {padding: .5em 0;border-bottom: 1px solid #aaa;}
@@ -45,6 +47,7 @@
 	#slick-body div[role="results"] h4 {font-size: .8em;color: #555;}
 	#slick-body div[role="results"] a {}
 	#slick-body div[role="results"] a:hover {text-decoration: none;}
+
 
 /* TABLE STYLE 
 ===========================================*/
