--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
 <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700' rel='stylesheet' type='text/css'>
 <link rel='stylesheet' id='default_css-css'  href='http://edsource.org/wp-content/themes/nakatomi/style.css' type='text/css' media='all' />
 <link rel='stylesheet' id='default_css-css'  href='http://edsource.org/wp-content/themes/nakatomi/templates/slick/slick.css' type='text/css' media='all' />
-<link rel='stylesheet' id='default_css-css'  href='/static/lcff-database.css' type='text/css' media='all' />
+<link rel='stylesheet' id='default_css-css'  href='http://edsource.org/local-control-funding-formula-database/static/lcff-database.css' type='text/css' media='all' />
 <link rel="shortcut icon" href="http://edsource.org/wp-content/themes/nakatomi/styles/graphics/favicon.png">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
