--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"><title>Local Control Funding Formula Database | EdSource</title></meta>
         {% include 'header.html' %}
-        <script type="text/javascript" src="/static/lcff-compare-search.js"></script>
+        <script type="text/javascript" src="http://edsource.org/local-control-funding-formula-database/static/lcff-compare-search.js"></script>
     </head>
     <body>
         <div id="slick-contain">
@@ -24,6 +24,16 @@
                     </div>
                 </div>
                 <div class="lcff-results fifty" role="results" type="0"></div>
+                <div class="fifty" style="margin-top:1em;">
+                    <h3>Notes about Data</h3>
+                    <p>The Local Control Funding Formula database includes actual per student funding for 2014-15 and the estimated per student funding in 2015-16 for nearly all of the state’s school districts and charter schools.</p>
+ 
+                    <p>Actual funding data for 2015-16 won’t be available until June 2016, after yearly attendance numbers and the percentage of high-needs students qualifying for additional funding have been calculated. Our estimates for 2015-16 use 2014-15 attendance data combined with the actual increase in LCFF funding in the state budget, which was substantial, and the mandated cost of living adjustment for 2015-16. In other words, our estimates do not take into account year-to-year shifts in attendance or possible swings in the demographic composition of students that could impact LCFF funding totals. In fast-growing districts and those with significant enrollment declines, the differences between our projections and actual future allocations could be significant. For most districts, however, the estimates should be relatively close approximations. Statewide, the Department of Finance projects a growth in average daily attendance of 0.02% in 2015-16.</p>
+                     
+                    <p>The Department of Education has estimated the per student allocations at full funding. We have updated those projections to include the cost of living increase (0.47 percent) included in Gov. Brown's proposed state budget for 2016-17 and the Department of Finance’s projected annual cost of living increase for 2017-18, 2018-19 and 2019-20. We then built in the average actual and projected COLAs for the past five years – 1.798 percent – to estimate COLAs for for 2020-21. The Legislature projected full funding by 2020-21; the Department of Finance has provided no change to that estimate. Again, "full funding per student" estimates do not incorporate possible changes in the size and composition of students through 2020-21. However, projected year-to-year fluctuations in average daily attendance are small.</p>
+
+                    <p>The 102 "basic aid" districts, whose schools are funded by local property taxes, do not receive money from the Local Control Funding Formula. Per student funding in 2014-15 for those districts, the latest year covered by state data, can be found in a separate data base, <a href="http://edsource.org/local-control-funding-formula-database/basic_aid.html">which you can find here</a>.</p>
+                </div>
             </section>      
             {% include 'footer.html' %}   
         </div>
